1 исправил класс InMemoryHistoryManager,  сделав условие лаконичнее 2 создал отдельные папки для тестов, задач и менеджеров